# lp2025

./: .cursorrules  .gitignore  Cargo.toml  README.md  justfile
lp-app/: Cargo.toml
lp-app/apps/fw-emu/: Cargo.toml  build.rs
lp-app/apps/fw-emu/src/: main.rs
lp-app/apps/fw-emu/src/output/: syscall.rs
lp-app/apps/fw-emu/src/serial/: syscall.rs
lp-app/apps/fw-emu/src/time/: syscall.rs
lp-app/apps/lp-cli/src/client/: client.rs
lp-app/apps/lp-cli/src/debug_ui/: panels.rs  ui.rs
lp-app/apps/lp-cli/src/server/: create_server.rs
lp-app/crates/lp-engine/: Cargo.toml
lp-app/crates/lp-engine-client/src/project/: view.rs
lp-app/crates/lp-engine/src/project/: runtime.rs
lp-app/crates/lp-engine/tests/: scene_render.rs
lp-app/crates/lp-model/src/project/: api.rs
lp-app/crates/lp-shared/src/project/: builder.rs
lp-app/plans/2026-01-28-fixture-path-mapping/: 00-design.md  00-plans-notes.md  01-update-coordinate-space.md  02-implement-ring-array-generation.md  03-add-ring-array-tests.md  04-add-texture-resolution-detection.md  05-remove-string-mapping.md  06-update-builder-and-examples.md
lp-glsl/: Cargo.toml  Cargo.toml.reference
lp-glsl/apps/embassy_hello_world_hashbrown/src/: shader_call.rs
lp-glsl/apps/esp32-glsl-jit/src/: jit_fns.rs  main.rs
lp-glsl/apps/fixed32-metrics/src/: clif.rs  stats.rs
lp-glsl/apps/lp-builtin-gen/: Cargo.toml
lp-glsl/apps/lp-builtin-gen/src/: discovery.rs  main.rs
lp-glsl/apps/lp-builtin-gen/src/lpfx/: errors.rs  generate.rs  glsl_parse.rs  mod.rs  parse.rs  process.rs  validate.rs
lp-glsl/apps/lp-builtin-gen/tests/: lpfx_parse_tests.rs
lp-glsl/apps/lp-builtins-app/: Cargo.toml  build.rs
lp-glsl/apps/lp-builtins-app/src/: builtin_refs.rs  main.rs
lp-glsl/crates/lp-builtins/: Cargo.toml
lp-glsl/crates/lp-builtins/src/: lib.rs
lp-glsl/crates/lp-builtins/src/builtins/: mod.rs
lp-glsl/crates/lp-builtins/src/glsl/: mod.rs
lp-glsl/crates/lp-builtins/src/util/: mat3_q32.rs  mod.rs  vec3_q32.rs
lp-glsl/crates/lp-emu-guest/: Cargo.toml
lp-glsl/crates/lp-filetests-gen/src/vec/: op_add.rs
lp-glsl/crates/lp-glsl-compiler/: Cargo.toml
lp-glsl/crates/lp-glsl-compiler/examples/: simple.rs
lp-glsl/crates/lp-glsl-compiler/src/exec/: emu.rs  executable.rs  jit.rs
lp-glsl/crates/lp-glsl-compiler/src/frontend/: mod.rs
lp-glsl/crates/lp-glsl-compiler/tests/: test_lpfx_struct_return.rs  test_structreturn_abi.rs  testcase_reloc_panic.rs  testcase_ssa_dominance.rs
lp-glsl/crates/lp-glsl-filetests/: Cargo.toml
lp-glsl/crates/lp-glsl-filetests/filetests/builtins/: matrix-compmult.glsl  matrix-inverse.glsl
lp-glsl/crates/lp-glsl-filetests/filetests/function/: call-nested.glsl  edge-out-not-read.glsl  edge-void-return-value.glsl  overload-ambiguous.glsl  overload-resolution.glsl  overload-same-name.glsl  param-array.glsl  param-default-in.glsl  param-struct.glsl  recursive-static-error.glsl  return-array.glsl  return-early.glsl  return-matrix.glsl  return-multiple.glsl  return-struct.glsl  scope-global.glsl  scope-local.glsl
lp-glsl/crates/lp-glsl-filetests/filetests/lp-lib/: lp_hash.glsl  lp_simplex1.glsl  lp_simplex2.glsl  lp_simplex3.glsl
lp-glsl/crates/lp-glsl-filetests/filetests/lpfx/: lp_rgb2hsv.glsl
lp-glsl/crates/lp-glsl-filetests/src/: lib.rs
lp-glsl/crates/lp-glsl-filetests/src/runner/: concurrent.rs
lp-glsl/crates/lp-glsl-filetests/src/test_run/: mod.rs  run.rs  run_detail.rs  run_summary.rs
lp-glsl/crates/lp-jit-util/src/: wrapper.rs
lp-glsl/crates/lp-jit-util/tests/: wrapper.rs
lp-glsl/crates/lp-riscv-tools/src/elf_loader/: mod.rs
lp-glsl/crates/lp-riscv-tools/tests/: trap_tests.rs
lp-glsl/esp32-glsl-jit/: Cargo.toml
lp-glsl/esp32-glsl-jit/src/: main.rs
lp-glsl/lp-glsl-builtins/src/host/: mod.rs
lp-glsl/lp-glsl-compiler/: Cargo.toml
lp-glsl/lp-glsl-compiler/src/backend/codegen/: emu.rs  jit.rs
lp-glsl/lp-glsl-compiler/src/backend/host/: registry.rs
lp-glsl/lp-glsl-compiler/src/backend/module/: gl_module.rs
lp-glsl/lp-glsl-compiler/src/exec/: emu.rs
lp-glsl/lp-glsl-compiler/src/frontend/: glsl_compiler.rs  mod.rs
lp-glsl/lp-glsl-compiler/src/frontend/codegen/: lpfx_fns.rs
lp-glsl/plans/2026-01-23-fixed32-metrics-vcode-assembly/: 00-design.md  00-overview.md  00-plans-notes.md  01-update-dependencies.md  06-test-and-cleanup.md
lp-glsl/plans/2026-01-23-fixed32-transform-ssa-dominance-fix/: 00-plans-notes.md
lp-glsl/plans/2026-01-23-fixed32-transform-use-builtins/: 00-design.md  00-overview.md  00-plans-notes.md  01-implement-add-sub-builtins.md  02-verify-div-builtin.md  03-update-transform.md  04-regenerate-builtin-registry.md  05-update-tests.md  06-verify-code-size-reduction.md
lp-glsl/plans/2026-01-23-lp-lib-float-to-fixed32-conversion/: 00-design.md  00-overview.md  00-plans-notes.md  01-extend-lp-lib-fn.md  02-update-codegen.md  03-fix-generator.md  04-regenerate-registry.md  05-verify-transform.md  06-test-end-to-end.md
lp-glsl/plans/2026-01-25-lpfx-refactor-cleanup/: 00-plans-notes.md
lp-glsl/plans/2026-01-26-lpfx-fns-codegen/: 00-design.md  00-plans-notes.md  04-implement-glsl-signature-parsing.md  09-update-existing-functions.md
lp-glsl/plans/2026-01-27-expected-fail-tests/: 00-design.md  00-plans-notes.md  08-add-baseline-marking-feature.md
lp-glsl/plans/2026-01-27-fix-filetests-low-hanging-fruit/: 00-design.md  00-plans-notes.md  04-fix-uint-cast.md
lp-glsl/plans/2026-01-27-fix-matrix-structreturn-test-runner/: 00-issue-notes.md
lp-glsl/plans/2026-01-27-lvalue-pointer-abstraction/: 00-design.md  00-overview.md
lp-riscv/lp-riscv-emu/: Cargo.toml
lp-riscv/lp-riscv-emu/src/: lib.rs  test_util.rs
lp-riscv/lp-riscv-emu/src/emu/: decoder.rs  error.rs  executor.rs  logging.rs  mod.rs
lp-riscv/lp-riscv-emu/src/serial/: host_serial.rs  test_serial.rs
lp-riscv/lp-riscv-emu/tests/: abi_tests.rs  guest_app_tests.rs  multi_return_test.rs  riscv_nostd_test.rs  stack_args_tests.rs  trap_tests.rs
lp-riscv/lp-riscv-inst/: Cargo.toml
lp-riscv/lp-riscv-inst/src/: decode.rs  lib.rs
lp-riscv/lp-riscv-inst/tests/: instruction_tests.rs
(+342 files in other folders)
