# This file is kept for reference but workspace is now defined in root Cargo.toml
# [workspace]
# resolver = '2'
# members = [
#     "crates/lp-engine",
#     "crates/lp-engine-client",
#     "crates/lp-shared",
#     "crates/lp-server",
#     "apps/lp-cli",
#     "crates/lp-model",
# ]

[package]
version = "40.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"
rust-version = "1.90.0"

# [workspace.lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

# [workspace.lints.clippy]
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
uninlined_format_args = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
useless_conversion = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'
from_over_into = 'warn'
redundant_field_names = 'warn'
multiple_bound_locations = 'warn'
extra_unused_type_parameters = 'warn'

# [workspace.dependencies]
# Cranelift crates - reference root workspace
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-native = { workspace = true }
cranelift-object = { workspace = true }
cranelift-reader = { workspace = true }
cranelift-control = { workspace = true }

# Common dependencies - reference root workspace
target-lexicon = { workspace = true }
hashbrown = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
object = { workspace = true }
critical-section = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# [profile.release]
# # Link-time optimization for all release builds - saves ~100-300 KB
# # This applies to all packages in the workspace
# lto = true
