[workspace]
resolver = '2'
members = [
    "crates/lp-builtins",
    "../lp-app/crates/lp-engine",
    "crates/lp-filetests-gen",
    "crates/lp-glsl-compiler",
    "crates/lp-glsl-filetests",
    "crates/lp-jit-util",
    "crates/lp-riscv-shared",
    "crates/lp-riscv-tools",
    "apps/embive-program",
    "apps/esp32-glsl-jit",
    "../lp-app/apps/lp-cli",
    "apps/lp-builtin-gen",
    "apps/lp-builtins-app",
    "apps/lp-test",
    "apps/test-structreturn",
]

[workspace.package]
version = "40.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"
rust-version = "1.90.0"

[workspace.lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

[workspace.lints.clippy]
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
uninlined_format_args = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
useless_conversion = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'
from_over_into = 'warn'
redundant_field_names = 'warn'
multiple_bound_locations = 'warn'
extra_unused_type_parameters = 'warn'

[workspace.dependencies]
# Cranelift crates - reference root workspace
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-native = { workspace = true }
cranelift-object = { workspace = true }
cranelift-reader = { workspace = true }
cranelift-control = { workspace = true }

# Common dependencies - reference root workspace
target-lexicon = { workspace = true }
hashbrown = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
object = { workspace = true }
critical-section = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Note: ESP32-C3 supports atomic CAS, so portable-atomic's unsafe-assume-single-core
# feature should not be enabled. If esp-hal enables it incorrectly, this may be
# a bug in esp-hal v1.0.0-rc.0 that needs to be reported upstream.

[profile.release]
# Link-time optimization for all release builds - saves ~100-300 KB
# This applies to all packages in the workspace
lto = true

[profile.release.package.esp32-glsl-jit]
# Size optimizations for embedded target (ESP32-C3)
# Strip debuginfo but keep symbols (needed for defmt/probe-rs) - saves ~1-1.5 MB
strip = "debuginfo"
# Optimize for size instead of speed - saves ~200-500 KB
opt-level = "z"
# Single codegen unit for better dead code elimination - saves ~50-100 KB
codegen-units = 1

